Closed
Bug 1104414
Opened 11 years ago
Closed 11 years ago
[TaskTracer] mozilla-central/ipc/chromium/src/chrome/common/ipc_message.cc:39:33: error: 'UNKNOWN' is not a member of 'mozilla::tasktracer::SourceEventType'
Categories
(Core :: Gecko Profiler, defect)
Tracking
()
RESOLVED
FIXED
mozilla36
People
(Reporter: gyeh, Assigned: gyeh)
References
Details
Attachments
(1 file)
1.79 KB,
patch
|
sinker
:
review+
|
Details | Diff | Splinter Review |
No description provided.
Assignee | ||
Comment 1•11 years ago
|
||
Assignee: nobody → gyeh
Attachment #8528100 -
Flags: review?(tlee)
Comment 2•11 years ago
|
||
Comment on attachment 8528100 [details] [diff] [review]
Patch 1(v1): Fix build error
Review of attachment 8528100 [details] [diff] [review]:
-----------------------------------------------------------------
rubber stamp!
Attachment #8528100 -
Flags: review?(tlee) → review+
Assignee | ||
Comment 3•11 years ago
|
||
Assignee | ||
Comment 4•11 years ago
|
||
Comment 5•11 years ago
|
||
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla36
You need to log in
before you can comment on or make changes to this bug.
Description
•