Bug 1104414, Patch 1: Fix build error: 'UNKNOWN' is not a member of 'mozilla::tasktracer::SourceEventType', r=sinker.